# RustInstaller

./: .gitignore  Cargo.toml  README.md  log_out.txt
common/: Cargo.toml
common/locales/: en.toml  fr.toml
common/src/: assoc.rs  i18n.rs  lib.rs  log.rs  models.rs  paths.rs  utils.rs
installer/: Cargo.toml  build.rs
installer/src/: extract.rs  install.rs  main.rs  payload.rs  proc.rs  ui_win32.rs  webview2_detect.rs
installer/src/ui/: minimal.rs  mod.rs
installer/src/ui/win32/: mod.rs
installer_builder/: Cargo.toml  build.rs
installer_builder/src/: args.rs  embed.rs  icon.rs  keygen.rs  main.rs  pack.rs  version.rs
test/install_test/: installer_info.json  installer_manifest.json
test/install_test_new/: installer_info.json  installer_manifest.json
test/keys/: priv.key  pub.key
test/v1.1/data/: config.json
uninstaller/: Cargo.toml  build.rs
uninstaller/src/: cleanup.rs  main.rs  stage1.rs  stage2.rs
uninstaller/src/stages/: finalize.rs  mod.rs  uninstall.rs
