[package]
name = "installer"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.5"
hex = "0.4"
anyhow = "1.0"
ed25519-dalek = "2"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
hdiffpatch-rs = { git = "https://github.com/TwintailTeam/hdiffpatch-rs" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_Security",
] }

[build-dependencies]
embed-manifest = "1.4"
