[package]
name = "installer_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.5"
rayon = "1.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
hex = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-manifest = "1.4"
