[package]
name = "uninstaller"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "uninstall"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }

[build-dependencies]
embed-manifest = "1.4"
