[package]
name = "uninstaller"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "uninstall"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[build-dependencies]
embed-manifest = "1.4"

[dev-dependencies]
tempfile = "3"
